# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssiokaavio.md
tier-list-app/: pyproject.toml  tasks.py
tier-list-app/data/images/: sources.txt
tier-list-app/data/test_images/: test_file.txt
tier-list-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoaly.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
tier-list-app/images/: sources.txt
tier-list-app/src/: index.py  initialize_database.py
tier-list-app/src/entities/: image_item.py  item.py  tier.py  tier_list.py
tier-list-app/src/repositories/: image_repository.py  tier_list_repository.py
tier-list-app/src/services/: item_service.py  tier_list_service.py
tier-list-app/src/tests/: item_service_test.py  tier_list_repository_test.py  tier_list_service_test.py
tier-list-app/src/tests/repositories/: image_repository_test.py  tier_list_repository_test.py
tier-list-app/src/tests/services/: tier_list_service_test.py
tier-list-app/src/ui/: list_view.py  tier_list_view.py  ui.py
